- fixed save bug (cre missing directory) - removed damn scrollbars

--- a/Notez/src/include/fxml/Stylesheets.css
+++ b/Notez/src/include/fxml/Stylesheets.css
@@ -80,7 +80,11 @@
 //  -fx-background-position: center;
 //}
 
-
+#txtNote .scroll-pane
+{
+     -fx-hbar-policy : never;
+     -fx-vbar-policy : never;
+}
 
 .toggle-button:hover 
 {
